--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <script src="/assets/js/constants.js"></script>
 
     <script src="/assets/models/background.js"></script>
+    <script src="/assets/models/enemies/enemy.js"></script>
+    <script src="/assets/models/indiana.js"></script>
+    <script src="/assets/models/character.js"></script>
     <script src="/assets/models/game.js"></script>
 
     <script src="/assets/js/index.js"></script>
