feat: exteds class enemy

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <script src="/assets/models/background.js"></script>
     <script src="/assets/models/enemies/enemy.js"></script>
+    <script src="/assets/models/enemies/ninja.js"></script>
     <script src="/assets/models/indiana.js"></script>
     <script src="/assets/models/character.js"></script>
     <script src="/assets/models/game.js"></script>
