feat: Number damage, new onKeypress

--- a/index.html
+++ b/index.html
@@ -12,13 +12,18 @@
 </body>
 
     <script src="/assets/js/constants.js"></script>
+    
+    <script src="/assets/models/utils/floatingDamage.js"></script>
 
     <script src="/assets/models/background.js"></script>
+
     <script src="/assets/models/enemies/enemy.js"></script>
     <script src="/assets/models/enemies/ninja.js"></script>
     <script src="/assets/models/enemies/bat.js"></script>
     <script src="/assets/models/enemies/rat.js"></script>
+
     <script src="/assets/models/indiana.js"></script>
+    
     <script src="/assets/models/game.js"></script>
 
     <script src="/assets/js/index.js"></script>
