fix: hub and ui

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link href="https://fonts.cdnfonts.com/css/public-pixel" rel="stylesheet">
+
     <title>Game - Project</title>
 </head>
 <body>
@@ -14,6 +17,7 @@
     <script src="/assets/js/constants.js"></script>
     
     <script src="/assets/models/utils/floatingDamage.js"></script>
+    <script src="/assets/models/utils/ui.js"></script>
 
     <script src="/assets/models/background.js"></script>
 
