feat: new powerup indianaJones

--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
     <script src="/assets/models/enemies/bat.js"></script>
     <script src="/assets/models/enemies/rat.js"></script>
     <script src="/assets/models/enemies/skeleton.js"></script>
+    <script src="/assets/models/enemies/monkey.js"></script>
+
+    <script src="/assets/models/powerups/powerup.js"></script>
+    <script src="/assets/models/powerups/gun.js"></script>
+    <script src="/assets/models/powerups/lifeup.js"></script>
 
     <script src="/assets/models/indiana.js"></script>
     
