--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     <script src="/assets/models/enemies/rat.js"></script>
     <script src="/assets/models/enemies/skeleton.js"></script>
     <script src="/assets/models/enemies/monkey.js"></script>
+    <script src="/assets/models/enemies/fireGround.js"></script>
 
     <script src="/assets/models/powerups/powerup.js"></script>
     <script src="/assets/models/powerups/gun.js"></script>
