fix: new instructions

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                     <li>Muevete con las flechas</li>
                     <li>Dispara con espacio.</li>
                     <li>Evita trampas y enemigos</li>
+                    <li>Supera los tres niveles</li>
                     <li>Llega hasta el final</li>
                 </ul>
                 <button class="pixel-btn" onclick="showMenu()">Atrás</button>
